--- a/docker-build-kafka/docker-compose.yml
+++ b/docker-build-kafka/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 services:
   kafka:
     build: .
+    hostname: "kafka"
     entrypoint: "/bin/bash entrypoint.sh"
     ports:
       - 9092:9092
